修复内存泄漏